[package]
name = "vdash"
description = "Safe Network safenode Dashboard"
version = "0.13.2"
authors = ["Mark <git@happybeing.com>"]
license = "GPL-3.0"
homepage = "https://github.com/happybeing/vdash"
repository = "https://github.com/happybeing/vdash"
readme = "README.md"
exclude = [".github"]
keywords = ["utility", "logfile", "monitor", "cli", "safenetwork"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tokio-macros = "2.1.0"
linemux = "0.3.0"
structopt = "~0.3.15"
futures = "0.3.19"
ratatui = { version = "0.24.0" }
crossterm = { version = "0.27.0" }
regex = "1.3.9"
tempfile = "3.1.0"
time = "0.3.29"
lazy_static = "1.4.0"
chrono = "0.4.15"
bincode = "1.3.1"
byte-unit = "4.0.9"
fs2 = "0.4.3"
rand = "0.8.5"
log = "0.4.11"
env_logger = "0.10.0"
strfmt = "0.2.4"

[[bin]]
name = "vdash"
path = "src/bin/vdash-crossterm.rs"
