[package]
name = "vdash"
description = "Autonomi node Dashboard"
version = "0.19.3"
authors = ["Mark <git@happybeing.com>"]
license = "GPL-3.0"
homepage = "https://github.com/happybeing/vdash"
repository = "https://github.com/happybeing/vdash"
readme = "README.md"
exclude = [".github"]
keywords = ["utility", "logfile", "monitor", "p2p", "autonomi"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tokio-macros = "2.1.0"
linemux = "0.3.0"
structopt = "~0.3.15"
futures = "0.3.19"
ratatui = { version = "0.25.0", features = ["serde"] }
crossterm = { version = "0.27.0" }
regex = "1.3.9"
tempfile = "3.1.0"
time = "0.3.29"
chrono = { version = "0.4.31", features = ["serde"] }
bincode = "1.3.1"
byte-unit = "5.1.4"
fs2 = "0.4.3"
rand = "0.8.5"
log = "0.4.11"
env_logger = "0.11.1"
strfmt = "0.2.4"
glob = "0.3.1"
serde = {version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["chrono_0_4"] }
reqwest = { version = "0.11.23", default_features = false, features = ["rustls-tls"] }

[[bin]]
name = "vdash"
path = "src/bin/vdash.rs"
